--- a/.env
+++ b/.env
@@ -1,3 +1,1 @@
-#Create the .env file with the follow data
-
-DATABASE_URL=postgres://{db_username}:{db_password}@{host}:{port}/{db_name}
+DATABASE_URL=postgres://postgres:Palestra030411!@localhost:2704/DB_CRUD
