--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URL=postgres://postgres:Palestra030411!@localhost:2704/DB_CRUD
+DATABASE_URL=postgres://{db_username}:{db_password}@{host}:{port}/{db_name}
